refactor:クラスの抽出
Add DepartmentCriteriaResource and update search API

Introduce `DepartmentCriteriaResource` for defining department search criteria with fields like name, code, start date, and end date. Updated `DepartmentApiController` to use the new resource in the search endpoint, ensuring better request structure and flexibility.